updating tracking code

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div id="cpi_widget"></div>
     <script type="text/javascript" async="async">
       //<![CDATA[
-      (function() {document.getElementById('cpi_widget').innerHTML = '<iframe src=\"//d13wgxzawu67ej.cloudfront.net/widgets/syndication/node/14104" width=\"0\" height=\"0\" frameBorder=\"0\" style=\"border: none; background: transparent; width: 0px; height: 0px;\"></iframe>'})();
+      (function() {document.getElementById('cpi_widget').innerHTML = '<iframe src=\"//cloudfront-1.publicintegrity.org/widgets/syndication/node/14104" width=\"0\" height=\"0\" frameBorder=\"0\" style=\"border: none; background: transparent; width: 0px; height: 0px;\"></iframe>'})();
       //]]>
     </script>
   </body>
