--- a/index.html
+++ b/index.html
@@ -104,8 +104,23 @@
     <script src="js/map.js"></script>
     <script src="js/app.js"></script>
 
+    <script type="infowindow/html" id="officers_infowindow_template">
+      <div class="cartodb-popup officers">
+        <a href="#close" class="cartodb-popup-close-button close">x</a>
+        <div class="cartodb-popup-content-wrapper">
+          <div class="cartodb-popup-content">
+            <h4>COUNTRY</h4>
+            <p>{{{country_name}}}</p>
+            <h4>COUNT OF OFFICERS</h4>
+            <p>{{{ count_of_officers }}}</p>
+          </div>
+        </div>
+        <div class="cartodb-popup-tip-container"></div>
+      </div>
+    </script>
+
     <script type="infowindow/html" id="client_infowindow_template">
-      <div class="cartodb-popup">
+      <div class="cartodb-popup stories">
         <a href="#close" class="cartodb-popup-close-button close">x</a>
         <div class="cartodb-popup-content-wrapper">
           <div class="row">
