target blank added to search databases link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </a>
               </li>
               <li>
-                <a href="http://offshoreleaks.icij.org/">Search the database</a>
+                <a href="http://offshoreleaks.icij.org/" target="_blank">Search the database</a>
               </li>
             </ul>
           </div>
