changed logo column

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <i class="map icon doc_icon"></i>
             </div>
             <div class="info border">
-              <img src="{{logo_1}}" alt="{{media_organization}}" title="{{media_organization}}"/>
+              <img src="{{logo}}" alt="{{media_organization}}" title="{{media_organization}}"/>
             </div>
           </div>
           <div class="row">
