added contry row in stories infowindow

--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
           </div>
           <div class="row">
             <div class="label">
+              <label>COUNTRY</label>
+            </div>
+            <div class="info">
+              <p>{{country}}</p>
+            </div>
+          </div>
+          <div class="row no-pad">
+            <div class="label">
               <label>FEATURED STORIES</label>
             </div>
             <div class="info">
