count of officers rounded shown in the infowindow

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h4>COUNTRY</h4>
             <p>{{{country_name}}}</p>
             <h4>COUNT OF OFFICERS</h4>
-            <p>{{{ count_of_officers }}}</p>
+            <p>{{{ count_of_officers_rounded }}}</p>
           </div>
         </div>
         <div class="cartodb-popup-tip-container"></div>
