closing infowindow when changes to other layer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
               </li>
               <li>
-                <a href="#/see-stories" class="stories selected">
+                <a href="#/see-stories" class="stories">
                   See the stories
                   <span class="info">
                     <span class="separator"></span>
