--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <div class="cartodb-popup-content">
             <h4>COUNTRY</h4>
             <p>{{{country_name}}}</p>
-            <h4>COUNT OF OFFICERS</h4>
+            <h4>NUMBER OF CLIENTS</h4>
             <p>{{{ count_of_officers_rounded }}}</p>
           </div>
         </div>
