added comma separator + infowindow without country label

--- a/index.html
+++ b/index.html
@@ -131,11 +131,9 @@
             </div>
           </div>
           <div class="row">
-            <div class="label">
-              <label>COUNTRY</label>
-            </div>
+            <div class="label"></div>
             <div class="info">
-              <p>{{country}}</p>
+              <p><strong>{{country}}</strong></p>
             </div>
           </div>
           <div class="row no-pad">
