--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ICIJ - OFFSHOE LEAKS</title>
+    <title>ICIJ - OFFSHORE LEAKS</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="shortcut icon" href="http://cloudfront-6.icij.org/sites/icij/themes/novusordo/favicon.ico" type="image/vnd.microsoft.icon" />
