--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   See the stories
                   <span class="info">
                     <span class="separator"></span>
-                    <p>For two years more than 50 media organizations analyzed 2.5 million leaked financial records. The stories triggered official inquiries, resignations and policy changes around the world.</p>
+                    <p>For two years more than 50 media organizations analyzed 2.5 million leaked financial records. <span class="triggered">The stories triggered</span> official inquiries, resignations and policy changes around the world.</p>
                   </span>
                 </a>
               </li>
@@ -65,7 +65,7 @@
                 </a>
               </li>
               <li>
-                <a href="http://offshoreleaks.icij.org/" class="option" target="_blank">Search the database</a>
+                <a href="http://offshoreleaks.icij.org/" target="_blank">Search the database</a>
               </li>
             </ul>
           </div>
@@ -116,11 +116,8 @@
     </div>
 
     <!-- SCRIPTS -->
-
     <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
-    <script src="js/vendor/fullscreen.js"></script>
-    <script src="js/map.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.compressed.js"></script>
 
     <script type="infowindow/html" id="officers_infowindow_template">
       <div class="cartodb-popup officers">
