fixing the word alone in the homepage

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="content">
           <h3>A massive data leak cracks open the secrets of tax havens</h3>
-          <p>More than 110 journalists in 60 countries investigate who does business offshore</p>
+          <p>More than 110 journalists in 60 countries investigate who <br/>does business offshore</p>
           <a href="#/explore" id="explore">Explore the map</a>
         </div>
         <div class="foot">
