--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="shortcut icon" href="http://cloudfront-6.icij.org/sites/icij/themes/novusordo/favicon.ico" type="image/vnd.microsoft.icon" />
-    <meta name="description" content="For two years more than 50 media organizations analyzed 2.5 million leaked financial records. The stories triggered official inquiries, resignations and policy changes around the world.">
+    <meta name="description" content="Explore all the @icijorg #offshoreleaks stories in a map. More than 100 journalists working together in 60 countries.">
     <meta name="keywords" content="icij, offshore, leaks, CartoDB, maps, journalism, newspaper, investigative journalism, investigation, exposé, reporters, news media, news">
     <meta name="author" content="ICIJ">
     <meta name="DC.title" content="ICIJ - OFFSHORE LEAKS">
     <meta property="og:title" content="ICIJ - OFFSHORE LEAKS"/>
-    <meta property="og:description" content="For two years more than 50 media organizations analyzed 2.5 million leaked financial records. The stories triggered official inquiries, resignations and policy changes around the world."/> 
+    <meta property="og:description" content="Explore all the @icijorg #offshoreleaks stories in a map. More than 100 journalists working together in 60 countries."/> 
     <meta property="og:type" content="Visualization"/>
     <meta property="og:url" content="http://offshoreleaksmap.icij.org/" />
     <meta property="og:image" content="http://offshoreleaksmap.icij.org/img/layout/thumbnail.png"/>
@@ -19,7 +19,7 @@
     <meta name="twitter:site" content="@icijorg">
     <meta name="twitter:creator" content="@icijorg">
     <meta name="twitter:title" content="ICIJ - OFFSHORE LEAKS">
-    <meta name="twitter:description" content="For two years more than 50 media organizations analyzed 2.5 million leaked financial records. The stories triggered official inquiries, resignations and policy changes around the world.">
+    <meta name="twitter:description" content="Explore all the @icijorg #offshoreleaks stories in a map. More than 100 journalists working together in 60 countries.">
     <meta name="twitter:image:src" content="http://offshoreleaksmap.icij.org/img/layout/thumbnail.png">
 
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
@@ -38,10 +38,10 @@
           <div class="head">
             <h2><a href="#/landing">ICIJ</a></h2>
             <h3>OFFSHORE LEAKS</h3>
-            <p>One of the largest collaborations in<br/>journalism history</p>
+            <p>One of the largest collaborations in journalism history</p>
             <div class="social">
-              <a href="https://twitter.com/share?url=http%3A%2F%2Foffshoreleaksmap.icij.org&text=ICIJ%20-%20OFFSHORE%20LEAKS:" class="twitter">Twitter</a>
-              <a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Foffshoreleaksmap.icij.org&text=ICIJ%20-%20OFFSHORE%20LEAKS:" class="facebook">Facebook</a>
+              <a href="https://twitter.com/share?url=http%3A%2F%2Foffshoreleaksmap.icij.org&text=Explore%20all%20the%20%40icijorg%20%23offshoreleaks%20stories%20in%20a%20map.%20More%20than%20100%20journalists%20working%20together%20in%2060%20countries%20" class="twitter">Twitter</a>
+              <a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Foffshoreleaksmap.icij.org&text=Explore%20all%20the%20%40icijorg%20%23offshoreleaks%20stories%20in%20a%20map.%20More%20than%20100%20journalists%20working%20together%20in%2060%20countries%20" class="facebook">Facebook</a>
             </div>
           </div>
           <div class="content">
