--- a/index.html
+++ b/index.html
@@ -198,5 +198,16 @@
       (function() {document.getElementById('cpi_widget').innerHTML = '<iframe src=\"//cloudfront-1.publicintegrity.org/widgets/syndication/node/14104" width=\"0\" height=\"0\" frameBorder=\"0\" style=\"border: none; background: transparent; width: 0px; height: 0px;\"></iframe>'})();
       //]]>
     </script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-20934186-17', 'icij.org');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
