--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
 
     <!-- SCRIPTS -->
     <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
-    <script src="js/app.compressed.js"></script>
+    <!--<script src="js/app.compressed.js"></script>-->
+    <script src="js/vendor/fullscreen.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/app.js"></script>
 
     <script type="infowindow/html" id="officers_infowindow_template">
       <div class="cartodb-popup officers">
